--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "blazesoft-bookstore-test",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Leon <leon.karho.chung@gmail.com>",
-  "license": "MIT"
+	"name": "blazesoft-bookstore-test",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"main": "index.js",
+	"author": "Leon <leon.karho.chung@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"next": "^12.1.6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	}
 }
