--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 	"author": "Leon <leon.karho.chung@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.8.2",
 		"next": "^12.1.6",
+		"next-redux-wrapper": "^7.0.5",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.2"
 	}
 }
