--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 	"license": "MIT",
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.8.2",
+		"autoprefixer": "^10.4.7",
 		"next": "^12.1.6",
-		"next-redux-wrapper": "^7.0.5",
+		"postcss": "^8.4.14",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-redux": "^8.0.2"
+		"react-redux": "^8.0.2",
+		"tailwindcss": "^3.1.4"
 	}
 }
