--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.2",
-		"tailwindcss": "^3.1.4"
+		"tailwindcss": "^3.1.4",
+		"uuid": "^8.3.2"
 	}
 }
